# task_manager

./: .env.example  .gitignore  CONTRIBUTORS.md  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  INTERACTION.md  START_HERE.md
scripts/: tauri-cli.mjs
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/api/: tasks.ts
src/components/: SpecPanel.tsx  TaskPanel.tsx  TitleBar.tsx
sub-module/: .gitignore  README.MD  alembic.ini  pyproject.toml  requirements.txt
sub-module/alembic/: env.py
sub-module/alembic/versions/: 20260625_0001_create_tasks.py
sub-module/app/: database.py  main.py  models.py  rate_limit.py  schemas.py
sub-module/app/crud/: tasks.py
sub-module/docs/: API.MD  ARCHETECTURE.MD
sub-module/tests/: conftest.py  test_sqli.py  test_tasks.py
