[package]
name = "basic-overlay"
version = "0.1.0"
description = "Small Tauri overlay for task tracking and live spec notes."
authors = ["Basic Overlay"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "basic_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
